Fixed bug in textui tags window height. Fixed wrapping bug for roamer, would put flash on separate line in IE7, fixes #1129.

--- a/media/css/style-ie7.css
+++ b/media/css/style-ie7.css
@@ -54,6 +54,10 @@ form.items-per-page {
     width: 164px !important;
 }
 
+#right-column {
+	margin-left:190px;
+}
+
 #alternate-page #right-column {
     padding-left:0;
 }
